# random

./: README.md  bufferoverflow.c  dot_detection.py
chromalookup/: model.py  yaya_operations.py
opengl glad env/: CMakeLists.txt  my_opengl_app
opengl glad env/include/glad/include/glad/: glad.h
opengl glad env/include/glad/src/: glad.c
opengl glad env/src/: main.cpp
